--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Mirror the Github repos to Gitee.
-      uses: Yikun/hub-mirror-action@master
+      uses: wxzed/hub-mirror-action@master
       with:
         src: github/wxzed/testGit2Gitee
         dst: gitee/zed_wu/testGit2Gitee
