--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
       dst_token: ${{ secrets.GITEE_TOKEN }}
-      gitee_user: ${{ secrets.GITEE_USER }}
+      gitee_user: zed_wu
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
