--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -8,7 +8,7 @@ jobs:
   repo-sync:
     env:
       dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-      dst_token: ${{ secrets.GITEE_TOKEN }}
+      dst_token: 2050ab21d6af85f71dd42804ffe9d0b2
       gitee_user: zed_wu
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +27,7 @@ jobs:
           # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
-          dst_token:  ${{ secrets.GITEE_TOKEN }}
+          dst_token:  2050ab21d6af85f71dd42804ffe9d0b2
           # 如果是组织，指定组织即可，默认为用户 user
           # account_type: org
           # 直接取当前项目的仓库名
