--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -7,7 +7,44 @@ on:
 jobs:
   repo-sync:
     env:
-      dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+      dst_key: -----BEGIN OPENSSH PRIVATE KEY-----
+b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcn
+NhAAAAAwEAAQAAAYEAop4c9nEkUVZ/OJ0hjCbH/2vkkr+egTjG5oLa8R2SYdt/337skfZu
+4fqaVrgjOoHf8uMudKRCxEoPcgKedZZYJp6VwjfFlNnNg/Oml6jv6yu9t36ej8YO28TtDx
+J6xIwc/gnrDiuOsOkNNa4AEELLqw7BnUEXaSQ5Ie9PTt07k6CcEXk8bw/kl0VgcsEQ/+aX
+R75vt1TnEoKhP82Hin/oN3z/z+8wxLoJC9sZm3AhBYXRp77zmg8yy7g5pfNophlcFY9Ode
+khWDW2K3MES+tRGtNIALrqHEh3GB4FNRVDnl/WrMza7QULc23GbaQvHwkYa5iMyfo8ebDY
+56+ce4Zh0k3Pkmxrmc3NwAw75bf1BxB1fnIXsjhtd0HO9ke5XYRzqx+FpU1ZinCvO0jYVz
+px89lkEJrf+S3+VHfljQ2xryr3fWKXE1LkVyYGC8vfAAVp+bjfL2Hx48Ep+nOqBoyWPD6s
+/Q7bbw2zCL/3/MxW/ddQwvI3fg8sYMBIAiTvRmW5AAAFiHycSz18nEs9AAAAB3NzaC1yc2
+EAAAGBAKKeHPZxJFFWfzidIYwmx/9r5JK/noE4xuaC2vEdkmHbf99+7JH2buH6mla4IzqB
+3/LjLnSkQsRKD3ICnnWWWCaelcI3xZTZzYPzppeo7+srvbd+no/GDtvE7Q8SesSMHP4J6w
+4rjrDpDTWuABBCy6sOwZ1BF2kkOSHvT07dO5OgnBF5PG8P5JdFYHLBEP/ml0e+b7dU5xKC
+oT/Nh4p/6Dd8/8/vMMS6CQvbGZtwIQWF0ae+85oPMsu4OaXzaKYZXBWPTnXpIVg1titzBE
+vrURrTSAC66hxIdxgeBTUVQ55f1qzM2u0FC3Ntxm2kLx8JGGuYjMn6PHmw2OevnHuGYdJN
+z5Jsa5nNzcAMO+W39QcQdX5yF7I4bXdBzvZHuV2Ec6sfhaVNWYpwrztI2Fc6cfPZZBCa3/
+kt/lR35Y0Nsa8q931ilxNS5FcmBgvL3wAFafm43y9h8ePBKfpzqgaMljw+rP0O228Nswi/
+9/zMVv3XUMLyN34PLGDASAIk70ZluQAAAAMBAAEAAAGAban7FibOuxt9yAwPJ5ivnwx/pI
+ccuUA0whbU12193ghMf8f0eaqatEJv+rNK7pXPFNkn5vkvHXhkWhpyChJNeB3SGJvL3snS
+0n1phzUiNpHU6v20qHiEZKi0xUlNCWcD1j2SCohNPfisM9sXp9+jwcO9xfKzevA2py/fZ+
+vB1ZimJxJ/Mtag7XKXzEtuz2QN+Q/v/s5+1fjKDWDpWvlO/LyLNwqy9LgQibJD3pMLcdIA
+xQL8/JPrSX7/QW6Y0Aqg/34PdejUlIstZxfQ8av36kavQX0JJlI74y5CC+n0eFSmo3G/t2
+czKyuGISOeenpI173qoLCljWiyd+rVYAJAJxexLRjX8W52weyP7XMBpVcQYxVnXX6lpX+c
+8GofXSRzGBye959mAAzjwS2axYego/L/WQlbgjtH40iJKO06mA8oPaRZTdTAlfP6rcr5bR
+woTpAunwz84s33tutKpfFcgw3DPh3iahienFvQlE0dfmp4y2Fy0kD1waEy38FyLhQBAAAA
+wQCt65sX6lU2RzraDd9bEX8JcB8zM96E3V6aLCPkunGBtEROMSvTd1KJ8n3UwDhzWCZFfy
+LkDYoyLVu7OcSb8yY2qokH/aBNpPszEt/BDSulE53kRMWtW/o9F9ZID2ndcLY0kibh5VCR
+Tvmtzd7BGGSYVxHT73Vmwl5otMlKoaL0QwZMUQBA4oCm0B8jAlRLOykVLhxVwtVQhOCt06
+xEpX390r21tvUz29U7ObZZS779YEbPYjqGEncSxiRGcBIlqCQAAADBANMtpTASWK5roo4L
+5pSre5wqFJdPBRVHrnmdppQay1bMhM/1I/6r7TrXUPDyf+UruGp7KG+F/FqilipqLWJeOh
+Mwcy3l47FNXH9yD3FV4/ClY/rVc2oQ+PB6b+7BhVpKkj31q6lT3MWx6FX9s6ebQM8mc2ll
+cGBRD7bNm7IQtTGJArORvAqQ+EdBhVouTUgfHfYy3kIAM1B+T5sU5AKF8vxBD1keeFc73i
+4xZ2PTPXTshHFJj7CDpy1eVXO4sUp04QAAAMEAxSHtjbWLWUbVTILNrf/ajk74SD2z15oP
+dp1BQq2vD/Bf4TI+JEUVrlHSw4Ne7nd6uvEIJY/yvxMUps/67tn6+ao64o5VPxhu7uMlm6
+Nu5iD8R0ShNOlphSZORxVqTZQCNUHQafJRj4IS7RITux+J3KTVeaFVTVZf2odwYLtlawRy
+tcVSwvtwIsXAyylyt5Dot3SA92qeZNv3PJNKKuGTTpMFz60xQWoe3+sNV3CZBCfycf2PGx
+4o/oQM0zYVcLPZAAAAEDYyMzY0MzU3MkBxcS5jb20BAg==
+-----END OPENSSH PRIVATE KEY-----
       dst_token: 2050ab21d6af85f71dd42804ffe9d0b2
       gitee_user: zed_wu
     runs-on: ubuntu-latest
@@ -25,7 +62,44 @@ jobs:
           # 必选，需要同步到的 Gitee 用户（目的）
           dst: gitee/zed_wu
           # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
-          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+          dst_key: -----BEGIN OPENSSH PRIVATE KEY-----
+b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcn
+NhAAAAAwEAAQAAAYEAop4c9nEkUVZ/OJ0hjCbH/2vkkr+egTjG5oLa8R2SYdt/337skfZu
+4fqaVrgjOoHf8uMudKRCxEoPcgKedZZYJp6VwjfFlNnNg/Oml6jv6yu9t36ej8YO28TtDx
+J6xIwc/gnrDiuOsOkNNa4AEELLqw7BnUEXaSQ5Ie9PTt07k6CcEXk8bw/kl0VgcsEQ/+aX
+R75vt1TnEoKhP82Hin/oN3z/z+8wxLoJC9sZm3AhBYXRp77zmg8yy7g5pfNophlcFY9Ode
+khWDW2K3MES+tRGtNIALrqHEh3GB4FNRVDnl/WrMza7QULc23GbaQvHwkYa5iMyfo8ebDY
+56+ce4Zh0k3Pkmxrmc3NwAw75bf1BxB1fnIXsjhtd0HO9ke5XYRzqx+FpU1ZinCvO0jYVz
+px89lkEJrf+S3+VHfljQ2xryr3fWKXE1LkVyYGC8vfAAVp+bjfL2Hx48Ep+nOqBoyWPD6s
+/Q7bbw2zCL/3/MxW/ddQwvI3fg8sYMBIAiTvRmW5AAAFiHycSz18nEs9AAAAB3NzaC1yc2
+EAAAGBAKKeHPZxJFFWfzidIYwmx/9r5JK/noE4xuaC2vEdkmHbf99+7JH2buH6mla4IzqB
+3/LjLnSkQsRKD3ICnnWWWCaelcI3xZTZzYPzppeo7+srvbd+no/GDtvE7Q8SesSMHP4J6w
+4rjrDpDTWuABBCy6sOwZ1BF2kkOSHvT07dO5OgnBF5PG8P5JdFYHLBEP/ml0e+b7dU5xKC
+oT/Nh4p/6Dd8/8/vMMS6CQvbGZtwIQWF0ae+85oPMsu4OaXzaKYZXBWPTnXpIVg1titzBE
+vrURrTSAC66hxIdxgeBTUVQ55f1qzM2u0FC3Ntxm2kLx8JGGuYjMn6PHmw2OevnHuGYdJN
+z5Jsa5nNzcAMO+W39QcQdX5yF7I4bXdBzvZHuV2Ec6sfhaVNWYpwrztI2Fc6cfPZZBCa3/
+kt/lR35Y0Nsa8q931ilxNS5FcmBgvL3wAFafm43y9h8ePBKfpzqgaMljw+rP0O228Nswi/
+9/zMVv3XUMLyN34PLGDASAIk70ZluQAAAAMBAAEAAAGAban7FibOuxt9yAwPJ5ivnwx/pI
+ccuUA0whbU12193ghMf8f0eaqatEJv+rNK7pXPFNkn5vkvHXhkWhpyChJNeB3SGJvL3snS
+0n1phzUiNpHU6v20qHiEZKi0xUlNCWcD1j2SCohNPfisM9sXp9+jwcO9xfKzevA2py/fZ+
+vB1ZimJxJ/Mtag7XKXzEtuz2QN+Q/v/s5+1fjKDWDpWvlO/LyLNwqy9LgQibJD3pMLcdIA
+xQL8/JPrSX7/QW6Y0Aqg/34PdejUlIstZxfQ8av36kavQX0JJlI74y5CC+n0eFSmo3G/t2
+czKyuGISOeenpI173qoLCljWiyd+rVYAJAJxexLRjX8W52weyP7XMBpVcQYxVnXX6lpX+c
+8GofXSRzGBye959mAAzjwS2axYego/L/WQlbgjtH40iJKO06mA8oPaRZTdTAlfP6rcr5bR
+woTpAunwz84s33tutKpfFcgw3DPh3iahienFvQlE0dfmp4y2Fy0kD1waEy38FyLhQBAAAA
+wQCt65sX6lU2RzraDd9bEX8JcB8zM96E3V6aLCPkunGBtEROMSvTd1KJ8n3UwDhzWCZFfy
+LkDYoyLVu7OcSb8yY2qokH/aBNpPszEt/BDSulE53kRMWtW/o9F9ZID2ndcLY0kibh5VCR
+Tvmtzd7BGGSYVxHT73Vmwl5otMlKoaL0QwZMUQBA4oCm0B8jAlRLOykVLhxVwtVQhOCt06
+xEpX390r21tvUz29U7ObZZS779YEbPYjqGEncSxiRGcBIlqCQAAADBANMtpTASWK5roo4L
+5pSre5wqFJdPBRVHrnmdppQay1bMhM/1I/6r7TrXUPDyf+UruGp7KG+F/FqilipqLWJeOh
+Mwcy3l47FNXH9yD3FV4/ClY/rVc2oQ+PB6b+7BhVpKkj31q6lT3MWx6FX9s6ebQM8mc2ll
+cGBRD7bNm7IQtTGJArORvAqQ+EdBhVouTUgfHfYy3kIAM1B+T5sU5AKF8vxBD1keeFc73i
+4xZ2PTPXTshHFJj7CDpy1eVXO4sUp04QAAAMEAxSHtjbWLWUbVTILNrf/ajk74SD2z15oP
+dp1BQq2vD/Bf4TI+JEUVrlHSw4Ne7nd6uvEIJY/yvxMUps/67tn6+ao64o5VPxhu7uMlm6
+Nu5iD8R0ShNOlphSZORxVqTZQCNUHQafJRj4IS7RITux+J3KTVeaFVTVZf2odwYLtlawRy
+tcVSwvtwIsXAyylyt5Dot3SA92qeZNv3PJNKKuGTTpMFz60xQWoe3+sNV3CZBCfycf2PGx
+4o/oQM0zYVcLPZAAAAEDYyMzY0MzU3MkBxcS5jb20BAg==
+-----END OPENSSH PRIVATE KEY-----
           # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
           dst_token:  2050ab21d6af85f71dd42804ffe9d0b2
           # 如果是组织，指定组织即可，默认为用户 user
