--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
       dst_token: 2050ab21d6af85f71dd42804ffe9d0b2
-      gitee_user: null_507_5313
+      gitee_user: dfrobot
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,13 +23,13 @@ jobs:
           # 必选，需要同步的 Github 用户（源）
           src: github/wxzed
           # 必选，需要同步到的 Gitee 用户（目的）
-          dst: gitee/null_507_5313
+          dst: gitee/dfrobot
           # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
           dst_token:  2050ab21d6af85f71dd42804ffe9d0b2
           # 如果是组织，指定组织即可，默认为用户 user
-          # account_type: org
+          account_type: org
           # 直接取当前项目的仓库名
           static_list: ${{ github.event.repository.name }}
           
